Add hero section with title and description

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>GitHub Practice</title>
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <h1>Welcome to My Site</h1>
+      <p>This is a practice project using GitHub Desktop.</p>
+    </section>
+  </body>
 </html>
